--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Destiny Carr 
-![Alt text for your headshot](path/to/your/image.jpg "Optional image title")
+![Alt text for your headshot](assets/images-my headshot)
 #description: I am an aspiring Data Analyst with a strong passion for turning data into actionable insights that drive better decision-making. Currently, I am advancing my technical skills by pursuing the Google Data Analytics Professional Certificate, where I am gaining hands-on experience with SQL, Excel, R, and data visualization tools. My professional background has equipped me with strong problem-solving, communication, and analytical thinking skills, which I now bring into my data career journey. I am excited to apply my growing expertise to real-world projects that create measurable impact.
 show_downloads: false
 theme: jekyll-theme-animal
